# cpp-sandbox

./: README.md  clang.cfg  first_program  first_program.cpp  notes.md
codewars/001_reverse_words/: makefile  reverse_words  reverse_words.cpp  reverse_words.hpp  reverse_words_main.cpp
codewars/002_is_valid_walk/: is_valid_walk  is_valid_walk.cpp  is_valid_walk.hpp  is_valid_walk_main.cpp  makefile
codewars/002_is_valid_walk/tests/: CMakeLists.txt  is_valid_walk_test.cpp
codewars/003_find_outlier/: find_outlier.cpp  find_outlier.hpp  find_outlier_main.cpp
codewars/003_find_outlier/tests/: CMakeLists.txt  find_outlier_test.cpp
codewars/004_number_of_people/: makefile  number_of_people  number_of_people.cpp  number_of_people.hpp  number_of_people_main.cpp
codewars/004_number_of_people/tests/: CMakeLists.txt  number_of_people_test.cpp
codewars/005_testing_one_two/: makefile  testing_one_two  testing_one_two.cpp  testing_one_two.hpp  testing_one_two_main.cpp
codewars/005_testing_one_two/tests/: CMakeLists.txt  testing_one_two_test.cpp
codewars/006_binary_addition/: binary_addition  binary_addition.cpp  binary_addition.hpp  binary_addition_main.cpp  makefile
codewars/006_binary_addition/tests/: CMakeLists.txt  binary_addition_test.cpp
codewars/007_dont_give_me_five/: dont_give_me_five  dont_give_me_five.cpp  dont_give_me_five.hpp  dont_give_me_five_main.cpp  makefile
codewars/007_dont_give_me_five/tests/: CMakeLists.txt  dont_give_me_five_test.cpp
codewars/008_find_unique/: find_unique  find_unique.cpp  find_unique.hpp  find_unique_main.cpp  makefile
codewars/008_find_unique/tests/: CMakeLists.txt  find_unique_test.cpp
codewars/009_arithmetic_progression/: arithmetic_progression  arithmetic_progression.cpp  arithmetic_progression.hpp  arithmetic_progression_main.cpp  makefile
codewars/009_arithmetic_progression/tests/: CMakeLists.txt  arithmetic_progression_test.cpp
codewars/010_counting_duplicates/: counting_duplicates  counting_duplicates.cpp  counting_duplicates.hpp  counting_duplicates_main.cpp  makefile
codewars/010_counting_duplicates/tests/: CMakeLists.txt  counting_duplicates_test.cpp
codewars/011_bouncing_balls/: bouncing_balls  bouncing_balls.cpp  bouncing_balls.hpp  bouncing_balls_main.cpp  makefile
codewars/011_bouncing_balls/tests/: CMakeLists.txt  bouncing_balls_test.cpp
codewars/012_equal_sides/: equal_sides  equal_sides.cpp  equal_sides.hpp  equal_sides_main.cpp  makefile
codewars/012_equal_sides/tests/: CMakeLists.txt  equal_sides_test.cpp
codewars/013_unique_in_order/: makefile  unique_in_order  unique_in_order.cpp  unique_in_order.hpp  unique_in_order_main.cpp
codewars/013_unique_in_order/tests/: CMakeLists.txt  unique_in_order_test.cpp
codewars/014_tribonacci_sequence/: makefile  tribonacci_sequence  tribonacci_sequence.cpp  tribonacci_sequence.hpp  tribonacci_sequence_main.cpp
codewars/014_tribonacci_sequence/tests/: CMakeLists.txt  tribonacci_sequence_test.cpp
codewars/015_scramblies/: makefile  scramblies  scramblies.cpp  scramblies.hpp  scramblies_main.cpp
codewars/015_scramblies/tests/: CMakeLists.txt  scramblies_test.cpp
codewars/016_supermarket_queue/: makefile  supermarket_queue  supermarket_queue.cpp  supermarket_queue.hpp  supermarket_queue_main.cpp
codewars/016_supermarket_queue/tests/: CMakeLists.txt  supermarket_queue_test.cpp
sandbox/: makefile  sandbox  sandbox.cpp  sandbox.hpp  sandbox_main.cpp
sandbox/tests/: CMakeLists.txt  sandbox_test.cpp
saylor/unit_1/: exercise_1  exercise_1.cpp  exercise_2  exercise_2.cpp  exercise_3  exercise_3.cpp  exercise_4.cpp
test_example/: CMakeLists.txt  hello_test.cc
utility/: debug.cpp  debug.hpp
